fix: spacing

--- a/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
+++ b/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
@@ -134,7 +134,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
   }
 
   .sponsorImageElement {
